# river-extra

./: .gitignore  LICENSE  README.md  pyproject.toml
river_extra/compat/: pytorch.py
river_extra/ensemble/: __init__.py  online_extra_trees.py
river_extra/metrics/: __init__.py  kappa.py  prevalence_threshold.py  purity.py  q0.py  variation_info.py
river_extra/metrics/cluster/: __init__.py  bic.py  ssq_based.py
river_extra/model_selection/: __init__.py  bandit_d.py  bandit_g.py  benchmark_classification.py  classification_test.py  clustering_test.py  functional_anova.py  grid_search.py  hyper_band.py  importance.csv  iris[GridSearchCV]Model1.csv  messpt.py  random_search.py  recommendation_test.py  regression_test.py  sspt.py  test.py  teste.ipynb  teste.py
river_extra/prototype/: test_robust_soft_learning_vector_quantization.py
river_extra/tree/nodes/: et_nodes.py
river_extra/tree/splitter/: __init__.py  random_splitter.py
