[tool.poetry]
name = "river_extra"
version = "0.8.0"
description = "Additional estimators for the River package"
authors = ["MaxHalford <maxhalford25@gmail.com>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
river = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
