[tool.poetry]
name = "river_extra"
version = "0.13.0"
description = "Additional estimators for the River package"
authors = ["MaxHalford <maxhalford25@gmail.com>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
river = "0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
